Some fixes to personal details page  and sidebar
In index.php, added ids to sidebar labels.
In pagemovement.js, fixed label bolding in sidebar, so now correctly indicates current page. If validation is not successgil, the page box in the sidebar now  stays as "current", rather than changing to "incomplete".
Right sidebar buttons made to take up space when invisible, so buttons don't move around.
In template.css, changed buttonbar buttons and progressbar boxes have pointer  cursor when hovered over, so as to appear clickable.

--- a/template.css
+++ b/template.css
@@ -38,6 +38,10 @@ body {
   padding-bottom: 20%;
 }
 
+#buttonbar span {
+  cursor:pointer;
+}
+
 #sidebar {
 	display: flex;
 	width: 14%;
@@ -68,6 +72,7 @@ body {
 #sidebar-left li {
 	border: 4px solid white;
 	border-radius: 10px;
+  cursor: pointer;
 }
 
 #sidebar-right li {
